# relayfsd

./: .gitignore  PKGBUILD  README.md  go.mod  go.sum  pyproject.toml
relayfsd/: main.py
src/: req.md  sync.go
