[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "relayfsd"
version = "1.0.0"
description = "A lightweight Python tool that monitors a dir and automatically uploads completed files to another dir"
authors = [{name="Abdullah Almutairi"}]
dependencies = [
    "watchdog",
    "paramiko",
    "requests"
]
[tool.setuptools.packages.find]
where = ["src"]
[project.scripts]
relayfsd = "relayfsd.main:main"
